[project]
name = "dcsm"
version = "0.1.0"
description = "Docker Compose Secrets Manager"
requires-python = ">=3.12"
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-PyYAML",
]

[project.scripts]
dcsm = "dcsm:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dcsm"]

[tool.mypy]
strict = true
files = '.'
